# deepwiki-cli

./: .gitignore  .ls-lint.json  .typos.toml  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
hooks/: format.sh
src/: cli.rs  client.rs  main.rs  output.rs  spinner.rs
tests/: cli_integration.rs
