[package]
name = "deepwiki-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for DeepWiki — query GitHub repo wikis without MCP overhead"
license = "MIT"
repository = "https://github.com/hamsurang/deepwiki-cli"
keywords = ["deepwiki", "github", "wiki", "mcp", "cli"]

[[bin]]
name = "deepwiki"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.17", features = ["transport-streamable-http-client-reqwest", "client", "reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.dist]
inherits = "release"
lto = "thin"
