[package]
name = "deepwiki-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for DeepWiki — query GitHub repo wikis without MCP overhead"
license = "MIT"
repository = "https://github.com/hamsurang/deepwiki-cli"
homepage = "https://github.com/hamsurang/deepwiki-cli"
keywords = ["deepwiki", "github", "wiki", "mcp", "cli"]

[[bin]]
name = "deepwiki"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.17", features = ["transport-streamable-http-client-reqwest", "client", "reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["homebrew"]
tap = "hamsurang/homebrew-deepwiki-cli"
publish-jobs = ["homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
