[package]
name = "deepwiki-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for DeepWiki — query GitHub repo wikis without MCP overhead"
license = "MIT"
repository = "https://github.com/hamsurang/deepwiki-cli"
homepage = "https://github.com/hamsurang/deepwiki-cli"
keywords = ["deepwiki", "github", "wiki", "mcp", "cli"]

[[bin]]
name = "deepwiki-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rmcp = { version = "0.17", features = ["transport-streamable-http-client-reqwest", "client", "reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "hamsurang/homebrew-deepwiki-cli"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "./publish-crate"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
